--- a/index.Rmd
+++ b/index.Rmd
@@ -53,6 +53,47 @@ mun_sp <- dplyr::rename(mun_sp, codigo_ibge = 'code_muni')
 names (mun_sp)
 ```
 
+##Relação das Variáveis
+O Intuito deste tópico é analisar, atráves do banco de dados, como as doenças de Diabetes e Cardiopatia se relacionam. Assim, a partir de uma breve limpeza dos dados, foi possível juntar as duas doenças e analisar a idade média dos óbitos para cada municipio de São Paulo. 
+
+```{r include=FALSE, eval=FALSE}
+#Para Cardiopatias
+dplyr::select(dados,
+         nome_munic, 
+         codigo_ibge, 
+         idade, 
+         cs_sexo, 
+         diagnostico_covid19, 
+         obito, 
+         cardiopatia,
+         data_inicio_sintomas) |>  #selecionar para cardiopatia
+  filter(!(cardiopatia=='IGNORADO' | cs_sexo=='IGNORADO')) |> 
+  filter(obito==1, cardiopatia=='SIM', diagnostico_covid19=='CONFIRMADO')|>
+  group_by(codigo_ibge)|>
+  summarise(mean(idade)) |> 
+  rename(idade_media = 'mean(idade)')
+
+#Para Diabetes
+dplyr::select(dados,
+              nome_munic, 
+              codigo_ibge, 
+              idade, 
+              cs_sexo, 
+              diagnostico_covid19, 
+              obito, 
+              diabetes, 
+              data_inicio_sintomas) |>  filter(!(diabetes=='IGNORADO' | cs_sexo=='IGNORADO')) |> 
+  filter(obito==1, diabetes=='SIM', diagnostico_covid19=='CONFIRMADO') |>
+  group_by(codigo_ibge)|>
+  summarise(mean(idade)) |> 
+  rename(idade_media_diabetes = 'mean(idade)')
+
+read.csv('C:/Users/User/Desktop/Gustavo/Unicamp/Dados_carto/dados_diabetes_cardio.csv)
+
+```
+
+
+
 
 
 
