--- a/index.Rmd
+++ b/index.Rmd
@@ -38,7 +38,7 @@ Essa parte de Download e Descompactação poderia ser feita atráves de um servi
 Portanto, resolvi atribuir um jpeg do meu Ambiente. É interessante visualizar as variáveis de comorbidades para cada pessoa e o municipio a qual está relacionada
 ![Base de Dados](C:/Users/User/Desktop/Gustavo/Unicamp/Mestrado/curso_github_ime/sindemia_sp/sindemia_sp/img/base_covid.jpg)
 
-## Manipulação dos dados.
+## Manipulação dos dados
 Como o trabalho é exploratório, pretendo utilizar os dados em futuras pesquisas, também acredito que as tudo o que ocorre no espaço geográfico se relaciona. Sempre tento trazer o caráter espacial como uma variável importante a ser discutida. Assim, utilizei o pacote [Geobr](https://github.com/ipeaGIT/geobr) para fazer download do shapefile dos municípios de São Paulo e que futuramente, as variáveis e informações aqui geradas, poderão ser utilizadas em outros programas e formatos de arquivos.
 
 ```{r include=FALSE}
@@ -53,45 +53,26 @@ mun_sp <- dplyr::rename(mun_sp, codigo_ibge = 'code_muni')
 names (mun_sp)
 ```
 
-##Relação das Variáveis
-O Intuito deste tópico é analisar, atráves do banco de dados, como as doenças de Diabetes e Cardiopatia se relacionam. Assim, a partir de uma breve limpeza dos dados, foi possível juntar as duas doenças e analisar a idade média dos óbitos para cada municipio de São Paulo. 
+### Relação das Variáveis
+O Intuito deste tópico é analisar, atráves do banco de dados, como as doenças de Diabetes e Cardiopatia se relacionam. Assim, a partir de uma breve limpeza dos dados, foi possível juntar as duas doenças e analisar a idade média dos óbitos para cada municipio de São Paulo. Portanto, da tabela de pouco mais de 4 milhões de registros individuais, consegui fazer o join das duas tabelas que elaborei a partir do código disponível [aqui]().  
 
-```{r include=FALSE, eval=FALSE}
-#Para Cardiopatias
-dplyr::select(dados,
-         nome_munic, 
-         codigo_ibge, 
-         idade, 
-         cs_sexo, 
-         diagnostico_covid19, 
-         obito, 
-         cardiopatia,
-         data_inicio_sintomas) |>  #selecionar para cardiopatia
-  filter(!(cardiopatia=='IGNORADO' | cs_sexo=='IGNORADO')) |> 
-  filter(obito==1, cardiopatia=='SIM', diagnostico_covid19=='CONFIRMADO')|>
-  group_by(codigo_ibge)|>
-  summarise(mean(idade)) |> 
-  rename(idade_media = 'mean(idade)')
-
-#Para Diabetes
-dplyr::select(dados,
-              nome_munic, 
-              codigo_ibge, 
-              idade, 
-              cs_sexo, 
-              diagnostico_covid19, 
-              obito, 
-              diabetes, 
-              data_inicio_sintomas) |>  filter(!(diabetes=='IGNORADO' | cs_sexo=='IGNORADO')) |> 
-  filter(obito==1, diabetes=='SIM', diagnostico_covid19=='CONFIRMADO') |>
-  group_by(codigo_ibge)|>
-  summarise(mean(idade)) |> 
-  rename(idade_media_diabetes = 'mean(idade)')
+```{r echo=FALSE}
 
 dados <- read.csv('dados_diabetes_cardio.csv')
 
+dplyr::glimpse(dados)
 ```
-Teste
+## Gráficos e interações
+Gráfico de dispersão simples da idade média entre as duas comorbidades
+```{r}
+library(ggplot2)
+ggplot2::ggplot(dados, aes(x=idade_media,
+                     y=idade_media_diabetes))+
+  geom_point()
+```
+
+
+
 
 
 
