--- a/index.Rmd
+++ b/index.Rmd
@@ -63,13 +63,16 @@ dados <- read.csv('dados_diabetes_cardio.csv')
 dplyr::glimpse(dados)
 ```
 ## Gráficos e interações
-Gráfico de dispersão simples da idade média entre as duas comorbidades
+Gráfico de dispersão simples da idade média entre as duas comorbidades nos municipios paulistas. 
 ```{r}
 library(ggplot2)
 ggplot2::ggplot(dados, aes(x=idade_media,
                      y=idade_media_diabetes))+
   geom_point()
 ```
+Salvo em 16/2
+
+
 
 
 
