--- a/index.Rmd
+++ b/index.Rmd
@@ -63,14 +63,25 @@ dados <- read.csv('dados_diabetes_cardio.csv')
 dplyr::glimpse(dados)
 ```
 ## Gráficos e interações
-Gráfico de dispersão simples da idade média entre as duas comorbidades
+Em um primeiro cenário de análise, é válido verificar a dispersão da idade média dessas comorbidades nos municípios paulistas. Essa atividade pode gerar insights sobre o agrupamento das idades médias e suas dispersões ("outliers"). 
+Será que municípios que possuem idades médias mais avançadas possuem uma população mais idosa? Assim, elaborei um gráfico simples de dispersão para verificar como é essa distribuição. 
 ```{r}
 library(ggplot2)
 ggplot2::ggplot(dados, aes(x=idade_media,
                      y=idade_media_diabetes))+
-  geom_point()
+  geom_point()+
+  labs(title = "Relação da Média de Idade entre Óbitos de Cardiopatia e Diabetes nos municípios paulistas",
+              x="Média de Idade por cardiopatia",
+              y="Média de Idade por diabetes", 
+              caption='Fonte: Fundação Seade')
 ```
-
+Após isso, um gráfico de Boxplot pode ajudar a entender a interação entre as comorbidades, visualizar as médias e também verificar quais municípios encontram-se nos outliers. Assim:
+```{r}
+ggplot2::ggplot(dados, 
+                mapping = aes(x=idade_media,
+                              y=idade_media_diabetes))+
+  geom_boxplot()
+```
 
 
 
